@@ -1,7 +1,7 @@
 /* This code uses nvptx inline assembly guarded with acc_on_device, which is
-   not optimized away at -O0, and then confuses the target assembler.
-   { dg-skip-if "" { *-*-* } { "-O0" } { "" } } */
-   { dg-skip-if "" { hppa*-*-* } { "*" } { "" } } */
+   not optimized away at -O0, and then confuses the target assembler.  */
+/* { dg-skip-if "" { *-*-* } { "-O0" } { "" } } */
+/* { dg-skip-if "" { hppa*-*-* } { "*" } { "" } } */
 /* { dg-additional-options "-fopenacc-dim=16:16" } */
 
 #include <openacc.h>
