@@ -1,3 +1,8 @@
+2017-02-09  Jakub Jelinek  <jakub@redhat.com>
+
+	* testsuite/libgomp.oacc-c-c++-common/loop-dim-default.c: Move
+	dg-skip-if directive into a comment.
+
 2017-02-09  Nathan Sidwell  <nathan@codesourcery.com>
 	    Chung-Lin Tang  <cltang@codesourcery.com>
 
